test_programs/compile_failure/cyclic_associated_type/src/main.nr
trait Foo {
    type Bar;
}

impl Foo for () {
    // Self::Bar refers to itself, creating a cyclic type
    type Bar = Self::Bar;
}

fn main() { }
